Added an option to choose the color with a Color Dialog.

--- a/WhiteBoard/WhiteBoard.csproj
+++ b/WhiteBoard/WhiteBoard.csproj
@@ -93,6 +93,18 @@
   <ItemGroup>
     <None Include="Resources\WhiteBoard_Icon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eraser_Icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eraser_Stroke_Icon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eraser_Icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Eraser_Stroke_Icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
